<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="422dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Resultat"
        app:titleTextColor="#FFFFFF"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:text="Vos réponse"
        android:textColor="#7B1FA2"
        android:textSize="24dp" />
    <TextView
        android:id="@+id/resultq1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/resultq2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18dp"
         />

    <TextView
        android:id="@+id/noteg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/note"
        android:layout_marginTop="40dp"
        android:textColor="#7B1FA2"
        android:textSize="24dp" />
    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/rpnscr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/reponsec"
        android:textColor="#388E3C"
        android:textSize="24dp" />
    <TextView
        android:id="@+id/rpns1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/rpns1"
        android:textSize="18dp"
        />
    <TextView
        android:id="@+id/rpns2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/rpns2"
        android:textSize="18dp"
        />
    <Button
        android:id="@+id/btnr"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Essayer à nouveau"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
</LinearLayout>